fix some styling / dark mode bugs

--- a/polynote-frontend/style/colors.less
+++ b/polynote-frontend/style/colors.less
@@ -514,6 +514,11 @@ button {
 
 
   }
+
+  .vim-status {
+    border-color: @ui-border;
+    background: @ui-panel-bg;
+  }
 }
 
 .tree-view {
@@ -558,12 +563,9 @@ button {
   }
 }
 
-.notebooks-list {
+.ui-panel-content {
   border-color: @ui-border;
-
-  .ui-panel-content {
-    background: @ui-panel-bg;
-  }
+  background: @ui-panel-bg;
 
   &.highlight {
     .tree-view {
